lessons/lesson-06-cicd/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: learnreact
  labels:
    name: learnreact
    environment: production
