lessons/lesson-06-cicd/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: learnreact-backend-service
  namespace: learnreact
  labels:
    app: learnreact-backend
spec:
  type: ClusterIP
  selector:
    app: learnreact-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
